<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="20dp">
    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/desc"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:text="@string/txt1"
        android:textSize="20sp"
         />

    <TextView
        android:id="@+id/food_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_gravity="center"
android:layout_marginBottom="20dp"
        android:text="@string/txt"
        android:textSize="16sp"
        android:layout_marginTop="-30dp"/>


    <Button
        android:id="@+id/beli"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/judulmakanan"
        android:text="@string/beli"
        android:onClick="beli"
        android:textColor="#FFFFFF" />

    </LinearLayout>
</androidx.cardview.widget.CardView>