<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@color/colorPrimaryDark"
            android:layout_width="407dp"
            android:layout_height="178dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="-50dp"
            android:src="@drawable/logo_trompet">
        </ImageView>

    </RelativeLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="10dp"
            android:id="@+id/profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/cowo"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="24sp"
            android:id="@+id/tv_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Paket"
            android:textAlignment="center"
            android:textSize="24sp"
            android:id="@+id/tv_paket"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Harga"
            android:textAlignment="center"
            android:textSize="24sp"
            android:id="@+id/tv_harga"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_logout"
            android:text="@string/tolak"
            android:textColor="@color/white"/>

        <Button
            android:visibility="invisible"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_terima"
            android:text="@string/terima"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>