<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps"
    tools:context=".ObatHewan">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_obat_hewan"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judulmenumakanan"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logomenumakanan"
        android:layout_width="269dp"
        android:layout_height="125dp"

        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_trompet" />

    <TextView
        android:id="@+id/judulmenumakanan"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/rounded_1"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/pet_medicine"
        android:textColor="#000000"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_history_obat"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:background="@drawable/judulmakanan"
        android:gravity="center"
        android:onClick="history"
        android:text="@string/button_history"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_obat_hewan" />


</androidx.constraintlayout.widget.ConstraintLayout>



