<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bgapps">


    <ImageView
        android:layout_width="407dp"
        android:layout_height="178dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_trompet"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"></ImageView>


    <TextView
        android:id="@+id/judulmakanan2"
        android:layout_width="386dp"
        android:layout_height="151dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/rounded_1"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/pet_food"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ScrollView

        android:layout_width="398dp"
        android:layout_height="310dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judulmakanan2">


        <LinearLayout
            android:layout_width="404dp"
            android:layout_height="324dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.707"
            tools:layout_editor_absoluteX="-31dp">


            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginRight="@dimen/cardview_compat_inset_shadow"
                android:layout_marginBottom="30dp"
                android:elevation="30dp"
                app:cardBackgroundColor="#5D6FAF"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">


                <TextView

                    android:id="@+id/textView"
                    android:layout_width="340dp"
                    android:layout_height="184dp"
                    android:background="#005D6FAF"
                    android:gravity="center"
                    android:text="@string/info3"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView

                    android:id="@+id/textView3"
                    android:layout_width="340dp"
                    android:layout_height="222dp"
                    android:background="#005D6FAF"
                    android:gravity="center"
                    android:text="@string/garis"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView

                    android:id="@+id/textView4"
                    android:layout_width="340dp"
                    android:layout_height="263dp"
                    android:background="#005D6FAF"
                    android:gravity="center"
                    android:text="@string/info4"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />


            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible">

            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible">

            </Button>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>














