<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DokterActivity"
    android:background="@drawable/bgapps">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dokter"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/juduldokter"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="221dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logomenudokter"
        android:layout_width="269dp"
        android:layout_height="125dp"

        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_trompet"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/juduldokter"
        android:layout_width="386dp"
        android:layout_height="151dp"
        android:background="@drawable/rounded_1"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/doctor"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logomenudokter"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_history_dokter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/judulmakanan"
        android:textColor="#FFFFFF"
        android:onClick="history"
        android:text="@string/history_dokter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/juduldokter"
        app:layout_constraintVertical_bias="0.017" />


</androidx.constraintlayout.widget.ConstraintLayout>



