<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuAdminActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@color/colorPrimaryDark"
            android:layout_width="407dp"
            android:layout_height="178dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="-50dp"
            android:src="@drawable/logo_trompet">
        </ImageView>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:onClick="logout"
            android:id="@+id/judulmakanan"
            android:layout_width="386dp"
            android:layout_height="151dp"
            android:background="@drawable/rounded_1"
            android:elevation="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/admin"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="5dp">
        </TextView>
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_margin="10dp"
                android:id="@+id/menu_grooming"
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="100dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_grooming"/>
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grooming"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:id="@+id/add_obat"
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="100dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_medicine"/>
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tambah_obat"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_margin="10dp"
                android:id="@+id/list_accept"
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="100dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_grooming"/>
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_accept"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:id="@+id/list_decline"
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="100dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_grooming"/>
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_decline"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>